--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "path": "^0.12.7",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
